syntax = "proto3";

package location.v1;

option go_package = "navigation_service/gen/go/location/v1;locationv1";

service LocationService {
  rpc CreateLocation(CreateLocationRequest) returns (CreateLocationResponse);
  rpc GetLocation(GetLocationRequest) returns (GetLocationResponse);
  rpc UpdateLocation(UpdateLocationRequest) returns (UpdateLocationResponse);
  rpc DeleteLocation(DeleteLocationRequest) returns (DeleteLocationResponse);
  rpc ListLocations(ListLocationsRequest) returns (ListLocationsResponse);
}

enum LocationType {
  LOCATION_TYPE_UNSPECIFIED = 0;
  LOCATION_TYPE_AIRPORT = 1;
  LOCATION_TYPE_BUS_TERMINAL = 2;
  LOCATION_TYPE_TRAIN_STATION = 3;
  LOCATION_TYPE_PORT = 4;
}

message Location {
  uint64 id = 1;
  string name = 2;
  LocationType type = 3;
  string address = 4;
  double latitude = 5;
  double longitude = 6;
  bool active = 7;
  int64 created_at = 8;
  int64 updated_at = 9;
}

message CreateLocationRequest {
  string name = 1;
  LocationType type = 2;
  string address = 3;
  double latitude = 4;
  double longitude = 5;
}

message CreateLocationResponse {
  Location location = 1;
}

message GetLocationRequest {
  uint64 id = 1;
}

message GetLocationResponse {
  Location location = 1;
}

message UpdateLocationRequest {
  uint64 id = 1;
  string name = 2;
  LocationType type = 3;
  string address = 4;
  double latitude = 5;
  double longitude = 6;
  bool active = 7;
}

message UpdateLocationResponse {
  Location location = 1;
}

message DeleteLocationRequest {
  uint64 id = 1;
}

message DeleteLocationResponse {}

message ListLocationsRequest {
  bool active_only = 1;
  int32 page_size = 2;
  int32 page_number = 3;
}

message ListLocationsResponse {
  repeated Location locations = 1;
  int32 total_count = 2;
}